--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,11 @@ body{
     font-family: 'Titillium Web', sans-serif;
     font-size: 20px;
 }
+.timestamp {
+    font-size: 0.8em;
+    color: gray;
+    margin-right: 10px;
+}
 
 
 
